Fix stretching login forms

--- a/app/assets/stylesheets/application/cards.sass
+++ b/app/assets/stylesheets/application/cards.sass
@@ -4,3 +4,7 @@
   background-color: var(--l4n-card-bg-color) !important
   .card-footer
     background-color: var(--l4n-card-bg-color) !important
+
+.devise-card
+  width: 100%
+  max-width: 400px
